--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -16,6 +16,7 @@
     margin-top: 1rem;
     box-shadow: 5px 5px 15px 10px rgb(34, 29, 29);
     animation: postFadeIn 2s;
+    z-index: 100;
 }
 
 /*form containers*/
